erDiagram
    USERS {
        INT user_id PK
        VARCHAR username
        VARCHAR email
        VARCHAR password_hash
        DATETIME registration_date
        VARCHAR last_visit_ip
        VARCHAR role "NULL | USERS | CSR | ADMIN | SELLER"
        VARCHAR status "ONLINE | OFFLINE"
        VARCHAR permission "ACTIVE | DEACTIVE | DELETED"
    }
    NOTES {
        INT note_id PK
        INT seller_id FK
        VARCHAR title
        TEXT description
        DECIMAL price
        DECIMAL overall_rating
        VARCHAR status "DRAFT | ACTIVE | TAKEN_DOWN"
    }
    WISH_LISTS {
        INT wishlist_id PK
        INT user_id FK
        INT note_id FK
        DATETIME added_at
    }

    USERS ||--o{ WISH_LISTS : collects
    NOTES ||--o{ WISH_LISTS : appears_in
